Moved reddit data to folder data and changed path accordingly in relevant files

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87ed2b13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reddit_df = pd.read_csv(\"raw_reddit_data.csv\")"
+    "reddit_df = pd.read_csv(\"../data/raw_reddit_data.csv\")"
    ]
   },
   {
